[project]
name = "blogv3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "doc8>=2.0.0",
    "esbonio>=0.16.5",
    "flake8-pyproject>=1.2.3",
    "requests>=2.32.4",
    "rstcheck>=6.2.5",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-favicon>=1.0.1",
    "sphinx-gitstamp>=0.4.0",
    "sphinx-prompt>=1.10.0",
    "sphinx-readable-theme>=1.3.0",
    "sphinx-tags>=0.4",
    "sphinxemoji>=0.3.1",
    "sphinxnotes-strike>=1.2.1",
]

[tool.uv.build-backend]
module_name = "blogv3"

[tool.flake8]
ignore = [
    "E501", # Line too long
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "esbonio>=0.16.5",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.3",
    "isort>=6.0.1",
    "pip>=25.1.1",
    "rstcheck>=6.2.5",
]


[tool.doc8]
ignore = [
    "D001", # Line too long
]
